--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clean-css-brunch": "^2.0.0",
     "css-brunch": "^2.0.0",
     "javascript-brunch": "^2.0.0",
+    "sass-brunch": "^2.0.0",
     "uglify-js-brunch": "^2.0.0"
   }
 }
